# data-warehouse-migrate

./: .dockerignore  .gitignore  Dockerfile  MYSQL_DESTINATION_MIGRATION_PLAN.md  MYSQL_MIGRATION_PLAN.md  README.md  docker-compose.yml  main.py  pyproject.toml  test_data_types.py  test_float64_pyarrow.py  test_pyarrow_compatibility.py  test_source_schema_types.py  test_string_type_preservation.py
data_warehouse_migrate/: __init__.py  bigquery_client.py  cli.py  config.py  config_loader.py  exceptions.py  logger.py  maxcompute_client.py  migrator.py  mysql_writer.py  schema_mapper.py
examples/: migrate_example.py
scripts/: test_connections.py
tests/: test_schema_mapper.py
